--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "nodemon": "^1.9.2",
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
+    "request": "^2.72.0",
     "secure-random": "^1.1.1"
   },
   "devDependencies": {
